# Backend/docs/swagger.json
@@ -1,53 +1,310 @@
 {
-  "swagger": "2.0",
-  "info":{
-        "title":"GoFiberMongo",
-        "description":"GoFiberMongo",
-        "version":"1.0"
+    "swagger": "2.0",
+    "info": {
+        "description": "API for Zetting",
+        "title": "Zetting APi",
+        "termsOfService": "http://swagger.io/terms/",
+        "contact": {
+            "name": "API Support",
+            "email": "fiber@swagger.io"
+        },
+        "license": {
+            "name": "Apache 2.0",
+            "url": "http://www.apache.org/licenses/LICENSE-2.0.html"
+        },
+        "version": "1.0"
     },
-  "paths": {
-
-        "/api/create-user":{
-           "post":{
-                "operationId":"Create user",
-                "tags":[
-                    "SERVICE"
-                ],
-                "description":"Create user",
-                "summary":"Cea usuario",
-                "parameters":[
+    "host": "localhost:3000",
+    "basePath": "/api",
+    "paths": {
+        "/users/": {
+            "get": {
+                "security": [
                     {
-                        "name":"CheckContent",
-                        "in":"body",
-                        "description":"Content to validate",
-                        "required":true,
-						            "schema": {
-                            "$ref": "#/definitions/SendData"
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "tags": [
+                    "User"
+                ],
+                "summary": "get user.",
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                }
+            }
+        },
+        "/users/login": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "authentication.",
+                "parameters": [
+                    {
+                        "description": "Login",
+                        "name": "login",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserLogin"
                         }
                     }
                 ],
-                "responses":{
-
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthUser"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/register": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Auth"
+                ],
+                "summary": "register.",
+                "parameters": [
+                    {
+                        "description": "Register",
+                        "name": "register",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/models.UserRegistration"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.AuthUser"
+                        }
+                    }
+                }
+            }
+        },
+        "/users/{email}": {
+            "get": {
+                "tags": [
+                    "Helper"
+                ],
+                "summary": "check user exists.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Email",
+                        "name": "email",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
                 }
             }
         }
-  },
-
-  "definitions":{
-        "SendData": {
-            "required": [
-                "name",
-                "email"
-
-            ],
+    },
+    "definitions": {
+        "models.AuthUser": {
+            "type": "object",
             "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user": {
+                    "$ref": "#/definitions/models.User"
+                }
+            }
+        },
+        "models.Features": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer"
+                },
+                "body": {
+                    "type": "string"
+                },
+                "eye_color": {
+                    "type": "string"
+                },
+                "facial_hair": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "hair_color": {
+                    "type": "string"
+                },
+                "hair_type": {
+                    "type": "string"
+                },
+                "hair_zise": {
+                    "type": "string"
+                },
+                "height": {
+                    "description": "desde aqui es actores",
+                    "type": "integer"
+                },
+                "skills": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "skin": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.Profession": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
-                "email":{
+                "price": {
+                    "type": "integer"
+                }
+            }
+        },
+        "models.User": {
+            "type": "object",
+            "properties": {
+                "contact": {
+                    "$ref": "#/definitions/models.UserContact"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "features": {
+                    "$ref": "#/definitions/models.Features"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "my_projects": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "password": {
+                    "type": "string"
+                },
+                "perfil_image": {
+                    "type": "string"
+                },
+                "profession": {
+                    "$ref": "#/definitions/models.Profession"
+                },
+                "projects": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "updated_at": {
+                    "type": "string"
+                },
+                "verified": {
+                    "type": "boolean"
+                },
+                "work_requests": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "models.UserContact": {
+            "type": "object",
+            "properties": {
+                "country": {
+                    "type": "string"
+                },
+                "email": {
+                    "type": "string"
+                },
+                "identifier_document": {
+                    "type": "string"
+                },
+                "phone": {
                     "type": "string"
                 }
             }
+        },
+        "models.UserLogin": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.UserRegistration": {
+            "type": "object",
+            "properties": {
+                "contact": {
+                    "$ref": "#/definitions/models.UserContact"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
+                    "type": "string"
+                },
+                "password": {
+                    "type": "string"
+                },
+                "perfil_image": {
+                    "type": "string"
+                },
+                "profession": {
+                    "$ref": "#/definitions/models.Profession"
+                }
+            }
         }
-}
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "Authorization",
+            "in": "header"
+        }
+    }
 }
